Fix the whitespace issue. #171

--- a/www/sites/default/themes/axr/css/home.css
+++ b/www/sites/default/themes/axr/css/home.css
@@ -1,11 +1,11 @@
 #main {
-	padding: 0 0 35px 0px;
+	padding: 50px 0 35px 0px;
 }
 
 #main .above_fold > .nested_0
 {
 	width: 855px;
-	padding: 50px 0 20px 20px;
+	padding: 0 0 20px 20px;
 	margin: 0px auto;
 }
 
