--- a/www/sites/default/themes/axr/css/style.css
+++ b/www/sites/default/themes/axr/css/style.css
@@ -529,7 +529,6 @@ input::-webkit-input-placeholder
 #main
 {
 	margin: auto;
-	padding: 30px 0 0 0;
 	width: 900px;
 }
 
